--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
     height: 95vh;
-    width: 95vw;
+    width: 95vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color:white;
-    color: rgb(52, 165, 52);
+    color: rgb(18, 3, 104);
 }
